Ref#58672: Fixed the course progress block dropdown alignment issue

--- a/styles.css
+++ b/styles.css
@@ -492,3 +492,8 @@
 #listemailstab thead th {
     border-bottom: none;
 }
+
+/* Fixed active courses table serach icon */
+#mostactivecourses input[type="search"] {
+    margin: 0;
+}
